# jsonschema_ui

./: HISTORY.rst  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-package.yml
src/jsonschema_ui/: __init__.py
tests/: test_complex.py  test_schema.py
